Configure 24toolkit.com domain with full SEO optimization
- Update meta tags (OpenGraph, Twitter Cards) with full domain URLs
- Add comprehensive sitemap.xml with all pages and AI tools
- Add robots.txt with proper crawl rules
- Configure security headers in vercel.json
- Create complete README.md with deployment instructions
- Update DEPLOYMENT.md with detailed deployment guide
- Add DOMAIN_CONFIGURATION.md summary
- Update .env.example with domain configuration

All AI tools ready to work with GitHub Models API
SEO fully optimized for search engines
Security headers configured
Ready for production deployment

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <meta property="og:title" content="24Toolkit — Your Complete Online Toolkit">
     <meta property="og:description" content="80+ free, fast, and AI-powered tools for developers, creators, and everyday users.">
-    <meta property="og:image" content="/src/assets/og-image.svg">
+    <meta property="og:image" content="https://24toolkit.com/src/assets/og-image.svg">
     <meta property="og:url" content="https://24toolkit.com">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="24Toolkit">
@@ -18,7 +18,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="24Toolkit — Your Complete Online Toolkit">
     <meta name="twitter:description" content="80+ free, fast, and AI-powered tools for developers, creators, and everyday users.">
-    <meta name="twitter:image" content="/src/assets/og-image.svg">
+    <meta name="twitter:image" content="https://24toolkit.com/src/assets/og-image.svg">
     
     <meta name="theme-color" content="#6D28D9">
     <meta name="apple-mobile-web-app-capable" content="yes">
