Fix CORS and API 405 errors for Spark AI endpoints
- Add CORS headers for /api/_spark/* in vercel.json
- Add _headers file for Vercel routing
- Fix mobile-web-app-capable meta tag warning
- Improve API endpoint accessibility

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <meta name="twitter:image" content="https://24toolkit.com/src/assets/og-image.svg">
     
     <meta name="theme-color" content="#6D28D9">
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     
